name:                   hw-tutorial-performance
version:                0.0.0.7
synopsis:               Diagnostics library
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-tutorial-performance#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Profiling
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.22

executable hw-tutorial-performance-rwha
  hs-source-dirs:       hw-tutorial-performance-rwha
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2
  build-depends:        base                          >= 4          && < 5
  default-language:     Haskell2010

executable hw-tutorial-performance-rwhb
  hs-source-dirs:       hw-tutorial-performance-rwhb
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2
  build-depends:        base                          >= 4          && < 5
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Tutorial.Performance
  build-depends:        base                          >= 4          && < 5
  default-language:     Haskell2010
  ghc-options:          -Wall

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-tutorial-performance
